--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,3 +292,26 @@ nav {
     float: right;
 }
 }
+
+.show-comments {
+    width: 100%
+}
+.btn {
+    display:inline-block;
+    margin-bottom:0;
+    font-weight:normal;
+    text-align:center;
+    vertical-align:middle;
+    cursor:pointer;
+    background-image:none;
+    border:1px solid transparent;
+    white-space:nowrap;
+    padding:6px 12px;
+    font-size:14px;
+    line-height:1.42857143;
+    border-radius:4px;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
+}
